# polyester

./: CHANGELOG.md  LICENSE  README.md  examples.py  main.py  pyproject.toml
examples/: basic_example.py  lme4_example.py  pymer_example.py  tidyr_example.py
src/polyester/: __init__.py  channels.py  convert_r.py  interpreter.py  jsoninterpreter.py  pyinterpreter.py  rinterpreter.py  utils.py
src/polyester/base/: baseinterpreter.py  channels.py
src/polyester/workers/: jsonworker.R  pyworker.py  rworker.R  specification.md
src/workers/: jsonworker.R  pyworker.py  specification.md
