[project]
name = "polyester"
version = "0.1.2"
description = "Run R interpreter from python"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "narwhals>=2.16.0",
    "pyarrow>=23.0.1",
]
license = "Apache-2.0"

# Here all workers will need to be included
[tool.setuptools.package-data]
polyester = [
    "workers/*.R"
]
